methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:27: error: not found: type color
var coul:color
         ^SlugSnail:11: error: not found: type color
def isFacingTrail(couleur:color):Boolean = {
                          ^